--- a/login.html
+++ b/login.html
@@ -217,7 +217,8 @@
       </div>
 
       <!-- Judul dan Deskripsi -->
-      <h1>Selamat Datang di Aplikasi DATA PEGAWAI DINAS PEMBERDAYAAN MASYARAKAT DAN DESA KABUPATEN KEPULAUAN TANIMBAR</h1>
+      <h1>SELAMAT DATANG</h1>
+      <p> Aplikasi Data Pegawai Dinas Pemberdayaan Masyarakat dan Desa Kabupaten Kepulauan Tanimbar</p>
       <p>
         Aplikasi ini digunakan untuk pengelolaan data pegawai DPMD Kabupaten Kepulauan Tanimbar secara efisien dan aman.
       </p>
