--- a/login.html
+++ b/login.html
@@ -218,7 +218,7 @@
 
       <!-- Judul dan Deskripsi -->
       <h1>SELAMAT DATANG</h1>
-      <p> Aplikasi Data Pegawai Dinas Pemberdayaan Masyarakat dan Desa Kabupaten Kepulauan Tanimbar</p>
+      <h1><p> Aplikasi Data Pegawai Dinas Pemberdayaan Masyarakat dan Desa Kabupaten Kepulauan Tanimbar</p></h1>
       <p>
         Aplikasi ini digunakan untuk pengelolaan data pegawai DPMD Kabupaten Kepulauan Tanimbar secara efisien dan aman.
       </p>
