--- a/daftar_hadir_mingguan.html
+++ b/daftar_hadir_mingguan.html
@@ -4,7 +4,8 @@
         // Cek status login saat halaman dimuat
         window.addEventListener('DOMContentLoaded', function() {
           if (sessionStorage.getItem('isLoggedIn') !== 'true') {
-            window.location.href = 'login.html';
+            // window.location.href = 'login.html'; // Dinonaktifkan untuk mencegah error
+            console.log("Mode pratinjau: Pengecekan login dilewati.");
           }
         });
       </script>
@@ -383,25 +384,26 @@
             padding: 10px 0;
             color: #000;
         }
+        
         .print-header {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: center; /* Mengatur grup (logo + teks) ke tengah */
+            gap: 25px; /* Jarak antara logo dan teks */
             margin-bottom: 15px;
             border-bottom: 3px solid black;
             padding-bottom: 10px;
-            gap: 25px; /* Adjusted gap */
         }
         .print-header .logo { 
-            width: 70px; 
+            width: 70px;
             height: auto; 
             flex-shrink: 0;
         }
         .print-header .header-text { 
             text-align: center; 
             font-family: 'Times New Roman', Times, serif; 
-            flex-grow: 1; 
         }
+
         .print-header h3, .print-header h2, .print-header p { 
             margin: 0; 
             line-height: 1.4; 
@@ -473,7 +475,7 @@
                         <i class="fas fa-chevron-down dropdown-icon"></i>
                     </a>
                     <ul class="submenu">
-                        <li><a href="#">Surat Masuk</a></li>
+                        <li><a href="suratmasuk.html">Surat Masuk</a></li>
                         <li><a href="#">Surat Keluar</a></li>
                         <li><a href="#">Rekapan Data Surat</a></li>
                         <li><a href="#">Contoh Surat</a></li>
