--- a/bezeting.html
+++ b/bezeting.html
@@ -607,11 +607,11 @@
                         <li><a href="#">Contoh Surat</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="active"><i class="fas fa-file-invoice menu-icon icon-color-4"></i> <span>Bezeting Pegawai</span></a></li>
+                <li><a href="bezeting.html" class="active"><i class="fas fa-file-invoice menu-icon icon-color-4"></i> <span>Bezeting Pegawai</span></a></li>
                 <li><a href="#"><i class="fas fa-village menu-icon icon-color-5"></i> <span>Data Desa</span></a></li>
                 <li><a href="#"><i class="fas fa-info-circle menu-icon icon-color-6"></i> <span>Informasi</span></a></li>
                 <li><a href="master.html"><i class="fas fa-database menu-icon icon-color-7"></i> <span>Data Master</span></a></li>
-                <li><a href="#"><i class="fas fa-clipboard-user menu-icon icon-color-8"></i> <span>Daftar Hadir</span></a></li>
+                <li><a href="daftarhadir.html"><i class="fas fa-clipboard-user menu-icon icon-color-8"></i> <span>Daftar Hadir</span></a></li>
             </ul>
         </div>
         <div class="logout-btn">
