--- a/daftarhadir.html
+++ b/daftarhadir.html
@@ -527,6 +527,7 @@
                                 <option value="Cuti">Cuti</option>
                                 <option value="Sakit">Sakit</option>
                                 <option value="Izin">Izin</option>
+                                <option value="Tanpa Keterangan">Tanpa Keterangan</option>
                                 <option value="Meninggal Dunia">Meninggal Dunia</option>
                             </select>
                             <span class="keterangan-value"></span>
