--- a/daftar_hadir_mingguan.html
+++ b/daftar_hadir_mingguan.html
@@ -561,9 +561,14 @@
                             </div>
                         </div>
                         <div class="print-title">
-                            <h4>DAFTAR HADIR MINGGUAN PEGAWAI</h4>
-                            <p id="headerDateRange"></p>
+                            <h4 style="text-align: center; font-weight: bold; font-size: 16px; line-height: 0.7;">DAFTAR HADIR PEGAWAI ASN</h4>
+                            <h4 style="text-align: center; font-weight: bold; font-size: 16px; line-height: 0.7;">DINAS PEMBERDAYAAN MASYARAKAT DAN DESA</h4>
+                            <h4 style="text-align: center; font-weight: bold; font-size: 16px; line-height: 0.7;">KABUPATEN KEPULAUAN TANIMBAR</h4>
+                            <h4 style="text-align: center; font-weight: bold; font-size: 16px; line-height: 0.7;">TAHUN 2025</h4>
+                            <p></p>
+                            <p id="headerDateRange" style="text-align: center; line-height: 0.7;"></p>
                         </div>
+                        
                     </caption>
                     <thead>
                         <tr>
