--- a/daftarhadir.html
+++ b/daftarhadir.html
@@ -425,7 +425,7 @@
                 <div class="signature-section">
                      <div class="signature-block">
                         <p>Mengetahui,</p>
-                        <p>KEPALA DINAS PEMBERDAYAAN MASYARAKAT DAN DESA</p>
+                        <p>Plt. KEPALA DINAS PEMBERDAYAAN MASYARAKAT DAN DESA</p>
                         <p>KABUPATEN KEPULAUAN TANIMBAR</p>
                         <br><br><br>
                         <p class="name" id="kadisName"></p>
