--- a/bezeting.html
+++ b/bezeting.html
@@ -594,14 +594,14 @@
         <div class="sidebar-menu">
             <ul>
                 <li><a href="#"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
-                <li><a href="#"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
+                <li><a href="datapegawai.html"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
                  <li class="menu-item-has-children">
                     <a href="#" class="dropdown-toggle">
                         <div><i class="fas fa-envelope-open-text menu-icon icon-color-3"></i> <span>Surat</span></div>
                         <i class="fas fa-chevron-down dropdown-icon"></i>
                     </a>
                     <ul class="submenu">
-                        <li><a href="#">Surat Masuk</a></li>
+                        <li><a href="masuksuratcontoh">Surat Masuk</a></li>
                         <li><a href="#">Surat Keluar</a></li>
                         <li><a href="#">Rekapan Data Surat</a></li>
                         <li><a href="#">Contoh Surat</a></li>
@@ -615,7 +615,7 @@
             </ul>
         </div>
         <div class="logout-btn">
-            <a href="#" id="logoutLink"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
+            <a href="login.html" id="logoutLink"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
         </div>
     </div>
     
