--- a/daftar_hadir_mingguan.html
+++ b/daftar_hadir_mingguan.html
@@ -468,14 +468,14 @@
         <div class="sidebar-menu">
             <ul>
                 <li><a href="index.html"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
-                <li><a href="#"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
+                <li><a href="datapegawai.html"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
                 <li class="menu-item-has-children">
                     <a href="#" class="dropdown-toggle">
                         <div><i class="fas fa-envelope-open-text menu-icon icon-color-3"></i> <span>Surat</span></div>
                         <i class="fas fa-chevron-down dropdown-icon"></i>
                     </a>
                     <ul class="submenu">
-                        <li><a href="suratmasuk.html">Surat Masuk</a></li>
+                        <li><a href="masuksuratcontoh.html">Surat Masuk</a></li>
                         <li><a href="#">Surat Keluar</a></li>
                         <li><a href="#">Rekapan Data Surat</a></li>
                         <li><a href="#">Contoh Surat</a></li>
