--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         <i class="fas fa-chevron-down dropdown-icon"></i>
                     </a>
                     <ul class="submenu">
-                        <li><a href="masuksuratcontoh.html">Surat Masuk</a></li>
+                        <li><a href="suratmasuk.html">Surat Masuk</a></li>
                         <li><a href="#">Surat Keluar</a></li>
                         <li><a href="#">Rekapan Data Surat</a></li>
                         <li><a href="#">Contoh Surat</a></li>
