--- a/suratmasuk.html
+++ b/suratmasuk.html
@@ -204,7 +204,7 @@
                         <li><a href="#">Contoh Surat</a></li>
                     </ul>
                 </li>
-                <li><a href="./bezeting.html"><i class="fas fa-file-invoice menu-icon icon-color-4"></i> <span>Bezeting Pegawai</span></a></li>
+                <li><a href="bezeting.html"><i class="fas fa-file-invoice menu-icon icon-color-4"></i> <span>Bezeting Pegawai</span></a></li>
                 <li><a href="#"><i class="fas fa-village menu-icon icon-color-5"></i> <span>Data Desa</span></a></li>
                 <li><a href="#"><i class="fas fa-info-circle menu-icon icon-color-6"></i> <span>Informasi</span></a></li>
                 <li><a href="./data_master.html"><i class="fas fa-database menu-icon icon-color-7"></i> <span>Data Master</span></a></li>
@@ -221,7 +221,7 @@
             </ul>
         </div>
         <div class="logout-btn no-print">
-            <a href="#"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
+            <a href="login.html"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
         </div>
     </div>
     
