--- a/master.html
+++ b/master.html
@@ -445,7 +445,7 @@
         <div class="sidebar-menu">
             <ul>
                 <li><a href="index.html"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
-                <li><a href="#"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
+                <li><a href="datapegawai.hmtl"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
                 <li class="menu-item-has-children">
                     <a href="#" class="dropdown-toggle">
                         <div><i class="fas fa-envelope-open-text menu-icon icon-color-3"></i> <span>Surat</span></div>
