--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
         </div>
         <div class="sidebar-menu">
             <ul>
-                <li><a href="#" class="active"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
-                <li><a href="#"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
+                <li><a href="index.html" class="active"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
+                <li><a href="datapegawai.html"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
                 <li class="menu-item-has-children">
                     <a href="#" class="dropdown-toggle">
                         <div><i class="fas fa-envelope-open-text menu-icon icon-color-3"></i> <span>Surat</span></div>
@@ -449,7 +449,7 @@
             </ul>
         </div>
         <div class="logout-btn">
-            <a href="#"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
+            <a href="login.html"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
         </div>
     </div>
     
