--- a/bezeting.html
+++ b/bezeting.html
@@ -593,7 +593,7 @@
         </div>
         <div class="sidebar-menu">
             <ul>
-                <li><a href="#"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
+                <li><a href="index.html"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
                 <li><a href="datapegawai.html"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
                  <li class="menu-item-has-children">
                     <a href="#" class="dropdown-toggle">
