--- a/suratmasuk.html
+++ b/suratmasuk.html
@@ -173,14 +173,14 @@
         <div class="sidebar-menu">
             <ul>
                 <li><a href="./index.html"><i class="fas fa-home menu-icon icon-color-1"></i> <span>Beranda</span></a></li>
-                <li><a href="datapegawai.html"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
+                <li><a href="./datapegawai.html"><i class="fas fa-users menu-icon icon-color-2"></i> <span>Data Pegawai</span></a></li>
                 <li class="menu-item-has-children open">
                     <a href="#" class="dropdown-toggle">
                         <div><i class="fas fa-envelope-open-text menu-icon icon-color-3"></i> <span>Surat</span></div>
                         <i class="fas fa-chevron-down dropdown-icon"></i>
                     </a>
                     <ul class="submenu">
-                        <li><a href="suratmasuk.html" class="active">Surat Masuk</a></li>
+                        <li><a href="./suratmasuk.html" class="active">Surat Masuk</a></li>
                         <li><a href="#">Surat Keluar</a></li>
                         <li><a href="#">Rekap Data Surat</a></li>
                         <li><a href="#">Contoh Surat</a></li>
@@ -203,7 +203,7 @@
             </ul>
         </div>
         <div class="logout-btn no-print">
-            <a href="#"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
+            <a href="./login"><i class="fas fa-sign-out-alt"></i> <span>Keluar</span></a>
         </div>
     </div>
     
