--- a/suratmasuk.html
+++ b/suratmasuk.html
@@ -529,7 +529,7 @@
 
                 let disposisiHTML = `
                     <div class="print-header">
-                        <img src="https://i.ibb.co/zV4syN7/logo-kkt.png" alt="Logo KKT" class="logo" onerror="this.src='https://placehold.co/80x80?text=Logo'">
+                        <img src="logo copy.png" alt="Logo KKT" class="logo" onerror="this.src='https://placehold.co/80x80?text=Logo'">
                         <div class="header-text">
                             <h3>PEMERINTAH KABUPATEN KEPULAUAN TANIMBAR</h3>
                             <h2>DINAS PEMBERDAYAAN MASYARAKAT DAN DESA</h2>
