--- a/suratmasuk.html
+++ b/suratmasuk.html
@@ -591,9 +591,9 @@
                         </table>
                         <div class="signature-block">
                             <p>Plt. Kepala Dinas Pemberdayaan Masyarakat dan Desa<br>Kabupaten Kepulauan Tanimbar,</p>
-                            <p class="name">REINHARD SAINUKA, S.Sos</p>
-                            <p>Pembina Tingkat I</p>
-                            <p>NIP. 19670611 200012 1 004</p>
+                            <p class="name">Ir. MESSALA HUTABARAT, M.M</p>
+                            <p>Pembina Utama</p>
+                            <p>NIP. 19710722 199703 1 006</p>
                         </div>
                         <div style="clear: both;"></div>
                     </div>
