--- a/daftar_hadir_mingguan.html
+++ b/daftar_hadir_mingguan.html
@@ -10,6 +10,14 @@
         });
       </script>
 <head>
+    <script>
+    // Skrip ini berjalan segera untuk melindungi halaman sebelum dirender.
+    if (sessionStorage.getItem('isLoggedIn') !== 'true') {
+        // Jika belum login, paksa alihkan ke halaman login.
+        // Ganti 'login.html' jika nama file login Anda berbeda.
+        window.location.replace('login.html');
+    }
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Hadir Mingguan - DPMD Kab. Kepulauan Tanimbar</title>
