--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <script>
+    // Skrip ini berjalan segera untuk melindungi halaman sebelum dirender.
+    if (sessionStorage.getItem('isLoggedIn') !== 'true') {
+        // Jika belum login, paksa alihkan ke halaman login.
+        // Ganti 'login.html' jika nama file login Anda berbeda.
+        window.location.replace('login.html');
+    }
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - DPMD Kab. Kepulauan Tanimbar</title>
