--- a/suratmasuk.html
+++ b/suratmasuk.html
@@ -172,6 +172,23 @@
         }
     </style>
 </head>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<script>
+  // PASTE KODE KONFIGURASI ANDA DARI FIREBASE DI SINI
+  const firebaseConfig = {
+    apiKey: "...", // Kunci unik Anda
+    authDomain: "...", // Kunci unik Anda
+    databaseURL: "...", // Kunci unik Anda
+    projectId: "...", // Kunci unik Anda
+    storageBucket: "...", // Kunci unik Anda
+    messagingSenderId: "...", // Kunci unik Anda
+    appId: "..." // Kunci unik Anda
+  };
+
+  // Inisialisasi Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 <body>
     <!-- Sidebar -->
     <div class="sidebar no-print" id="sidebar">
