--- a/bezeting.html
+++ b/bezeting.html
@@ -596,14 +596,13 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script>
   // PASTE KODE KONFIGURASI ANDA DARI FIREBASE DI SINI
-  const firebaseConfig = {
-    apiKey: "...", // Kunci unik Anda
-    authDomain: "...", // Kunci unik Anda
-    databaseURL: "...", // Kunci unik Anda
-    projectId: "...", // Kunci unik Anda
-    storageBucket: "...", // Kunci unik Anda
-    messagingSenderId: "...", // Kunci unik Anda
-    appId: "..." // Kunci unik Anda
+  apiKey: "AIzaSyBqAyS1M6UzvQk-VyQ5KkBCQlDiRcoKU1A",
+  authDomain: "dpmd-tanimbar-app.firebaseapp.com",
+  projectId: "dpmd-tanimbar-app",
+  storageBucket: "dpmd-tanimbar-app.firebasestorage.app",
+  messagingSenderId: "138533762216",
+  appId: "1:138533762216:web:43378473418bcb5a043e9d",
+  measurementId: "G-Y4XV98TYPN"
   };
 
   // Inisialisasi Firebase
