--- a/master.html
+++ b/master.html
@@ -448,13 +448,13 @@
 <script>
   // PASTE KODE KONFIGURASI ANDA DARI FIREBASE DI SINI
   const firebaseConfig = {
-    apiKey: "...", // Kunci unik Anda
-    authDomain: "...", // Kunci unik Anda
-    databaseURL: "...", // Kunci unik Anda
-    projectId: "...", // Kunci unik Anda
-    storageBucket: "...", // Kunci unik Anda
-    messagingSenderId: "...", // Kunci unik Anda
-    appId: "..." // Kunci unik Anda
+    apiKey: "AIzaSyBqAyS1M6UzvQk-VyQ5KkBCQlDiRcoKU1A",
+  authDomain: "dpmd-tanimbar-app.firebaseapp.com",
+  projectId: "dpmd-tanimbar-app",
+  storageBucket: "dpmd-tanimbar-app.firebasestorage.app",
+  messagingSenderId: "138533762216",
+  appId: "1:138533762216:web:43378473418bcb5a043e9d",
+  measurementId: "G-Y4XV98TYPN"
   };
 
   // Inisialisasi Firebase
