--- a/lembar-disposisi.html
+++ b/lembar-disposisi.html
@@ -76,6 +76,23 @@
         .error-box h2 { color: #58151c; }
         .error-box pre { white-space: pre-wrap; word-wrap: break-word; background: #f5f5f5; padding: 10px; border-radius: 4px; margin-top: 10px; }
     </style>
+        <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<script>
+  // PASTE KODE KONFIGURASI ANDA DARI FIREBASE DI SINI
+  const firebaseConfig = {
+    apiKey: "AIzaSyBqAyS1M6UzvQk-VyQ5KkBCQlDiRcoKU1A",
+  authDomain: "dpmd-tanimbar-app.firebaseapp.com",
+  projectId: "dpmd-tanimbar-app",
+  storageBucket: "dpmd-tanimbar-app.firebasestorage.app",
+  messagingSenderId: "138533762216",
+  appId: "1:138533762216:web:43378473418bcb5a043e9d",
+  measurementId: "G-Y4XV98TYPN"
+  };
+
+  // Inisialisasi Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </head>
 <body>
     <div class="disposisi-container">
